# Nebulark

./: Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
assets/: nebulark.desktop  org.nebulark.policy
crates/nebulark-awg/: Cargo.toml
crates/nebulark-awg/src/: config.rs  lib.rs  parser.rs  uapi.rs
crates/nebulark-cli/: Cargo.toml
crates/nebulark-cli/src/: commands.rs  daemon.rs  main.rs  server.rs  tui.rs  warp.rs
crates/nebulark-common/: Cargo.toml
crates/nebulark-common/src/: config.rs  error.rs  lib.rs  types.rs
crates/nebulark-core/: Cargo.toml
crates/nebulark-core/src/: lib.rs  platform.rs  profiles.rs  tunnel.rs
crates/nebulark-platform-linux/: Cargo.toml
crates/nebulark-platform-linux/src/: backend.rs  lib.rs  netdev.rs  process.rs
crates/nebulark-platform-windows/: Cargo.toml
crates/nebulark-platform-windows/src/: backend.rs
crates/nebulark-ui/: Cargo.toml
crates/nebulark-ui/src/: app.rs  daemon.rs  main.rs  setup.rs  tray.rs
