[workspace]
resolver = "2"
members = [
    "crates/nebulark-awg",
    "crates/nebulark-cli",
    "crates/nebulark-common",
    "crates/nebulark-core",
    "crates/nebulark-platform-linux",
    "crates/nebulark-platform-windows",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["IsNotAcceptable"]
license = "MIT"

[package]
name = "Nebulark"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
tokio = { version = "1", features = ["full"]}
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
toml = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
clap = { version = "4", features = ["derive"]}
async-trait = "0.1"
egui = "0.27"
eframe = "0.27"
