[workspace]
resolver = "2"
members = [
    "crates/nebulark-awg",
    "crates/nebulark-common",
    "crates/nebulark-core",
    "crates/nebulark-platform-linux",
    "crates/nebulark-platform-windows",
    "crates/nebulark-ui",
]

[workspace.package]
name = "Nebulark"
version = "0.1.1"
edition = "2021"
authors = ["IsNotAcceptable"]
license = "MIT"
repository = "https://github.com/IsNotAcceptable/Nebulark"
homepage = "https://github.com/IsNotAcceptable/Nebulark"
description = "AmneziaWG 2.0 client for Linux and Windows"

[workspace.dependencies]
tokio = { version = "1", features = ["full"]}
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
toml = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
clap = { version = "4", features = ["derive"]}
async-trait = "0.1"
egui = "0.27"
eframe = "0.27"
