[package]
name = "nebulark-platform-windows"
version.workspace = true
edition.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.56", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_Ndis",
] }

[dependencies]
nebulark-common = { path = "../nebulark-common"}
nebulark-core = { path = "../nebulark-core"}
nebulark-awg = { path = "../nebulark-awg"}
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }