[package]
name = "nebulark-ui"
version.workspace = true
edition.workspace = true

[package.metadata.appimage]
assets = [
    "assets/icons/nebulark-32.png",
    "assets/nebulark.desktop",
]
auto_link = true
auto_link_exclude_list = [
    "libglib*",
    "libgtk*",
    "libgdk*",
    "libgio*",
    "libpango*",
    "libcairo*",
    "libatk*",
    "libgdk_pixbuf*",
    "libgobject*",
    "libwayland*",
]

[[bin]]
name = "nebulark"
path = "src/main.rs"

[dependencies]
nebulark-common = { path = "../nebulark-common"}
nebulark-core = { path = "../nebulark-core"}
nebulark-awg = { path = "../nebulark-awg"}
nebulark-platform-linux = { path = "../nebulark-platform-linux"}
nebulark-platform-windows = { path = "../nebulark-platform-windows"}
eframe = { version = "0.27", features = ["default_fonts"] }
egui = "0.27"
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = "1"
dirs-next = "2"
nix = { version = "0.27", features = ["user"] }
serde = { version = "1.0.228", features = ["derive"] }
rfd = "0.14"
tray-icon = { version = "0.19", default-features = false }
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = { version = "0.18", features = ["v3_24"] }